Resolve "Layout shift after login, only reload normalizes the page"

--- a/src/app/components/home/_dialogs/register/register.component.scss
+++ b/src/app/components/home/_dialogs/register/register.component.scss
@@ -22,3 +22,7 @@ input {
     cursor: pointer;
   }
 }
+
+.custom-progress-bar ::ng-deep .mat-progress-bar-element::after {
+  background-color: var(--line-color, #f00) !important;
+}
